fixed alignment issue

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,6 @@ img {
     padding: 10px;
     border-radius: 10px;
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr;
 }
 
 .websites {
